--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conseils pour le montage vidéo, logiciels et matériel pour YouTube. Recommandations pour logiciels, équipements et astuces.">
+    <meta name="description" content="Conseils pour le montage vidéo, logiciels et matériel.">
     <title>Conseils et Recommandations pour le Montage Vidéo</title>
     <style>
         body {
@@ -86,9 +86,9 @@
             <h2>Sites et Applications Utiles</h2>
             <ul>
                 <li><a href="https://convertio.co" target="_blank">Convertio</a> – Un site simple pour convertir des fichiers vidéo, audio et images.</li>
-                <li><a href="https://www.megaupload.com" target="_blank">MEGA</a> – Un excellent outil pour le stockage en nuage et le transfert de fichiers lourds.</li>
+                <li><a href="https://www.megaupload.com" target="_blank">MEGA</a> – Un excellent outil pour le stockage en nuage et le transfert de fichiers lourds entre ton ordinateur et ton télephone.</li>
                 <li><a href="https://www.wondershare.com" target="_blank">Wondershare</a> – Des outils comme Filmora et d'autres logiciels pour le montage vidéo, faciles à utiliser.</li>
-                <li><a href="https://www.steamdeck.com" target="_blank">Steam Deck</a> – L'application Steam pour gérer tes jeux et tes achats.</li>
+                <li><a href="https://www.bing.com/ck/a?!&&p=5594af2ef21ed48af19adaa98fc4a0de7c9274532b8eb1f3f52009518903399eJmltdHM9MTczNDczOTIwMA&ptn=3&ver=2&hsh=4&fclid=2c132ae8-dae1-6721-2ad4-3fb0db5566a5&psq=touch+portal&u=a1aHR0cHM6Ly93d3cudG91Y2gtcG9ydGFsLmNvbS8&ntb=1" target="_blank">Touch Portal</a> – L'application Touch Portal permet de transformer télephoneou tablette en Steam Deack.</li>
             </ul>
         </section>
 
