--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             <p>Voici une liste des meilleurs logiciels que tu peux utiliser pour éditer tes vidéos, avec des options adaptées pour différents niveaux et besoins :</p>
             <ul>
                 <li><strong>Filmora</strong> : Un logiciel puissant, facile à utiliser et avec beaucoup de fonctionnalités pour les débutants et les utilisateurs plus avancés. Il est également disponible sur <a href="https://filmora.wondershare.com" target="_blank">PC et Mac</a> ainsi que sur <a href="https://www.wondershare.com/filmora-mobile.html" target="_blank">tablette et téléphone</a> pour les montages mobiles.</li>
+                <p style="margin-bottom: 20px;">Attends chaque- rajoute :)Ensuit
+
                 <li><strong>HandBrake</strong> : Un excellent outil de conversion vidéo gratuit qui permet de compresser, convertir et formater des vidéos pour différents appareils. Télécharge-le sur : <a href="https://handbrake.fr" target="_blank">HandBrake</a>.</li>
                 <li><strong>DaVinci Resolve</strong> : Un logiciel professionnel de montage vidéo gratuit qui offre des fonctionnalités avancées telles que l'étalonnage des couleurs et la gestion des effets spéciaux. Télécharge-le sur : <a href="https://www.blackmagicdesign.com/products/davinciresolve/" target="_blank">DaVinci Resolve</a>.</li>
                 <li><strong>OBS Studio</strong> : Si tu fais des lives, OBS est le logiciel incontournable pour gérer les diffusions en direct avec des effets en temps réel. Découvre-le sur : <a href="https://obsproject.com" target="_blank">OBS Studio</a>.</li>
@@ -88,7 +90,7 @@
                 <li><a href="https://convertio.co" target="_blank">Convertio</a> – Un site simple pour convertir des fichiers vidéo, audio et images.</li>
                 <li><a href="https://www.megaupload.com" target="_blank">MEGA</a> – Un excellent outil pour le stockage en nuage et le transfert de fichiers lourds entre ton ordinateur et ton télephone.</li>
                 <li><a href="https://www.wondershare.com" target="_blank">Wondershare</a> – Des outils comme Filmora et d'autres logiciels pour le montage vidéo, faciles à utiliser.</li>
-                <li><a href="https://www.bing.com/ck/a?!&&p=5594af2ef21ed48af19adaa98fc4a0de7c9274532b8eb1f3f52009518903399eJmltdHM9MTczNDczOTIwMA&ptn=3&ver=2&hsh=4&fclid=2c132ae8-dae1-6721-2ad4-3fb0db5566a5&psq=touch+portal&u=a1aHR0cHM6Ly93d3cudG91Y2gtcG9ydGFsLmNvbS8&ntb=1" target="_blank">Touch Portal</a> – L'application Touch Portal permet de transformer télephoneou tablette en Steam Deack.</li>
+                <li><a href="https://www.bing.com/ck/a?!&&p=5594af2ef21ed48af19adaa98fc4a0de7c9274532b8eb1f3f52009518903399eJmltdHM9MTczNDczOTIwMA&ptn=3&ver=2&hsh=4&fclid=2c132ae8-dae1-6721-2ad4-3fb0db5566a5&psq=touch+portal&u=a1aHR0cHM6Ly93d3cudG91Y2gtcG9ydGFsLmNvbS8&ntb=1" target="_blank">Touch Portal</a> – L'application Touch Portal permet de transformer télephone ou tablette en Steam Deack.</li>
             </ul>
         </section>
 
