--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
             <p>Voici une liste des meilleurs logiciels que tu peux utiliser pour éditer tes vidéos, avec des options adaptées pour différents niveaux et besoins :</p>
             <ul>
                 <li><strong>Filmora</strong> : Un logiciel puissant, facile à utiliser et avec beaucoup de fonctionnalités pour les débutants et les utilisateurs plus avancés. Il est également disponible sur <a href="https://filmora.wondershare.com" target="_blank">PC et Mac</a> ainsi que sur <a href="https://www.wondershare.com/filmora-mobile.html" target="_blank">tablette et téléphone</a> pour les montages mobiles.</li>
-                <p style="margin-bottom: 20px;">Attends chaque- rajoute :)Ensuit
-
-                <li><strong>HandBrake</strong> : Un excellent outil de conversion vidéo gratuit qui permet de compresser, convertir et formater des vidéos pour différents appareils. Télécharge-le sur : <a href="https://handbrake.fr" target="_blank">HandBrake</a>.</li>
-                <li><strong>DaVinci Resolve</strong> : Un logiciel professionnel de montage vidéo gratuit qui offre des fonctionnalités avancées telles que l'étalonnage des couleurs et la gestion des effets spéciaux. Télécharge-le sur : <a href="https://www.blackmagicdesign.com/products/davinciresolve/" target="_blank">DaVinci Resolve</a>.</li>
-                <li><strong>OBS Studio</strong> : Si tu fais des lives, OBS est le logiciel incontournable pour gérer les diffusions en direct avec des effets en temps réel. Découvre-le sur : <a href="https://obsproject.com" target="_blank">OBS Studio</a>.</li>
+                <p style="margin-bottom: 20px
+         <li><strong>HandBrake</strong> : Un excellent outil de conversion vidéo gratuit qui permet de compresser, convertir et formater des vidéos pour différents appareils. Télécharge-le sur : <a href="https://handbrake.fr" target="_blank">HandBrake</a>.</li>
+             <p style="margin-bottom: 20px
+                 <li><strong>DaVinci Resolve</strong> : Un logiciel professionnel de montage vidéo gratuit qui offre des fonctionnalités avancées telles que l'étalonnage des couleurs et la gestion des effets spéciaux. Télécharge-le sur : <a href="https://www.blackmagicdesign.com/products/davinciresolve/" target="_blank">DaVinci Resolve</a>.</li>
+               <p style="margin-bottom: 20px
+                   <li><strong>OBS Studio</strong> : Si tu fais des lives, OBS est le logiciel incontournable pour gérer les diffusions en direct avec des effets en temps réel. Découvre-le sur : <a href="https://obsproject.com" target="_blank">OBS Studio</a>.</li>
             </ul>
 
             <p>Si tu cherches des outils pour améliorer tes vidéos lors des lives, n’hésite pas à utiliser des effets via OBS ou DaVinci Resolve pour enrichir l'expérience visuelle de tes spectateurs.</p>
