--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@
             <p>Pour un équipement optimal pour ton montage vidéo et tes lives, voici ce que je te conseille :</p>
             <ul>
                 <li><strong>Trépied Boya</strong> : Un trépied stable pour filmer, disponible pour un prix raisonnable. Idéal pour maintenir ton téléphone ou ta caméra stable pendant les enregistrements.</li>
-                <li><strong>Microphone Boya BY-MM1</strong> : Un micro à petit prix mais de qualité qui capte le son de manière claire pour tes vidéos et lives.</li>
-                <li><strong>Casque Sony</strong> : Pour avoir un son précis et de qualité, ce casque est idéal pour l’édition de tes vidéos et audios.</li>
-                <li><strong>Hub USB-C 7 en 1 (Anker)</strong> : Ce périphérique contient 7 ports, incluant USB-A, USB-C, carte SD, HDMI, et plus, pour connecter facilement tous tes équipements à ton PC. Disponible ici : <a href="https://www.amazon.com" target="_blank">Anker PowerExpand 7-in-1 USB-C Hub</a>.</li>
-                <li><strong>Sandisk 64Go USB</strong> : Pratique pour le stockage de fichiers et le transfert rapide entre appareils, idéal pour les vidéos 4K.</li>
+                <p style="margin-bottom: 20px
+                    <li><strong>Microphone Boya BY-MM1</strong> : Un micro à petit prix mais de qualité qui capte le son de manière claire pour tes vidéos et lives.</li>
+                <p style="margin-bottom: 20px
+                    <li><strong>Casque Sony</strong> : Pour avoir un son précis et de qualité, ce casque est idéal pour l’édition de tes vidéos et audios.</li>
+               <p style="margin-bottom: 20px
+                   <li><strong>Hub USB-C 7 en 1 (Anker)</strong> : Ce périphérique contient 7 ports, incluant USB-A, USB-C, carte SD, HDMI, et plus, pour connecter facilement tous tes équipements à ton PC. Disponible ici : <a href="https://www.amazon.com" target="_blank">Anker PowerExpand 7-in-1 USB-C Hub</a>.</li>
+                <p style="margin-bottom: 20px
+                    <li><strong>Sandisk 64Go USB</strong> : Pratique pour le stockage de fichiers et le transfert rapide entre appareils, idéal pour les vidéos 4K.</li>
             </ul>
 
             <p>Si tu as un budget plus limité, je te conseille de commencer par des équipements comme le micro Boya et un trépied basique, puis de compléter au fur et à mesure avec des éléments plus professionnels.</p>
