--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li><strong>Filmora</strong> – Idéal pour les débutants, avec des outils simples. <a href="https://filmora.wondershare.com" target="_blank">Télécharger</a>.</li>
                 <li><strong>OBS Studio</strong> – Pour les streams et enregistrements en direct. <a href="https://obsproject.com" target="_blank">Télécharger</a>.</li>
                 <li><strong>HandBrake</strong> – Convertisseur vidéo gratuit et open-source. <a href="https://handbrake.fr" target="_blank">Télécharger</a>.</li>
-                <li><strong>Final Cut Caméra</strong> – Logiciel gratuit pour montage et étalonnage avancé. <a href="https://apps.apple.com/us/app/final-cut-camera/id6469552837?l=fr-FR" target="_blank">Télécharger</a>.</li>
+                <li><strong>Final Cut Caméra</strong> – Un excellent outil de capture vidéo gratuit qui permet d'envoyer, automatiquement les vidéo sur l'ICloud. Télécharge-le sur : <a href="https://apps.apple.com/us/app/final-cut-camera/id6469552837?l=fr-FR" target="_blank">Télécharger</a>.</li>
             </ul>
         </section>
 
