--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <li><strong>Stockage Cloud</strong> : Avec 2 To d’iCloud, sauvegardez automatiquement vos vidéos et accédez-y sur tous vos appareils.</li>
                 <li><strong>Organisation</strong> : Utilisez un logiciel comme Bear pour organiser vos scripts et idées.</li>
                 <li><strong>Écran Secondaire</strong> : Le Samsung que vous utilisez est parfait pour travailler sur plusieurs fenêtres en même temps.</li>
+                <li><strong>Mega</strong> : Avec 20Go de Cloud, sauvegardez automatiquement vos vidéos et une option de transfert de fichier entre PC et telphone.</li>
             </ul>
         </section>
 
