--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
             <ul>
                 <li><strong>Stockage Cloud</strong> : Avec 2 To d’iCloud, sauvegardez automatiquement vos vidéos et accédez-y sur tous vos appareils.</li>
                 <li><strong>Organisation</strong> : Utilisez un logiciel comme Bear pour organiser vos scripts et idées.</li>
-                <li><strong>Écran Secondaire</strong> : Le Samsung que vous utilisez est parfait pour travailler sur plusieurs fenêtres en même temps.</li>
-                <li><strong>Mega</strong> : Avec 20Go de Cloud, sauvegardez automatiquement vos vidéos et une option de transfert de fichier entre PC et telphone.</li>
+                <li><strong>WonderShare</strong> : Des Logiciel gratuit et pour de multiples usage.</li>
+                <li><strong>Mega</strong> : Avec 20Go de Cloud, sauvegardez automatiquement vos vidéos et une option de transfert de fichier entre PC et telphone.</li> <a href="https://mega.io/fr/desktop" target="_blank">Télécharger</a>
+                <li><strong>Buds Pro 2</strong> : Mes écouteur de montages <a href="https://www.cdiscount.com/high-tech/casques-baladeur-hifi/samsung-galaxy-buds2-pro-anthracite/f-1065420-sam8806094512540.html?idOffre=4187729092&sv1=affiliate&sv_campaign_id=269861&awc=6948_1734826333_d41a15af80998537946eef8d939ba44b&cid=affil&cm_mmc=zanoxpb-_-269861" target="_blank">Télécharger</a>.</li>
+                <li><strong>Batterie Externe</strong> : Batterie Externe Iniu <a href="https://eu-main.iniushop.com/fr?shpxid=afd268f7-2cae-40c3-8b94-76aea205e0b2" target="_blank">Télécharger</a>.</li>
+            </ul>
             </ul>
         </section>
 
