--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
                 <li><strong>OBS Studio</strong> – Pour les streams et enregistrements en direct. <a href="https://obsproject.com" target="_blank">Télécharger</a>.</li>
                 <li><strong>HandBrake</strong> – Convertisseur vidéo gratuit et open-source. <a href="https://handbrake.fr" target="_blank">Télécharger</a>.</li>
                 <li><strong>Final Cut Caméra</strong> – Un excellent outil de capture vidéo gratuit qui permet d'envoyer, automatiquement les vidéo sur l'ICloud. Télécharge-le sur : <a href="https://apps.apple.com/us/app/final-cut-camera/id6469552837?l=fr-FR" target="_blank">Télécharger</a>.</li>
+                 <li><strong>Mouavi</strong> – Un excellent outil de montage vidéo gratuit. Télécharge-le sur : <a href="https://www.movavi.com/fr/video-editor-plus/?utm_campaign=486109246&utm_campaignid=486109246&utm_adgroupid=1240250194532398&msclkid=ffa648b04c6319087d422fd71f4be11c&utm_source=bing&utm_medium=cpc&utm_term=final%20cut&utm_content=Win%20Video%20Plus%20Editor%20-%20COMPETITORS%20OTHER%20VE%20-%2017%2F12%2F2024" target="_blank">Télécharger</a>.</li>
             </ul>
         </section>
 
         <section>
             <h2>Matériel à Considérer</h2>
-            <p>Voici quelques équipements utiles pour vos tournages et montages :</p>
+            <p>Voici quelques équipements utiles pour tes tournages et montages :</p>
             <ul>
                 <li>iPhone 11 – Capable de filmer en 4K à 240 FPS.</li>
                 <li>Micro Boya BY-MM1 – Idéal pour capturer un son clair.</li>
@@ -80,7 +81,7 @@
         </section>
 
         <section>
-            <h2>Astuces pour Optimiser votre Workflow</h2>
+            <h2>Astuces pour Optimiser ton Workflow</h2>
             <ul>
                 <li><strong>Stockage Cloud</strong> : Avec 2 To d’iCloud, sauvegardez automatiquement vos vidéos et accédez-y sur tous vos appareils.</li>
                 <li><strong>Organisation</strong> : Utilisez un logiciel comme Bear pour organiser vos scripts et idées.</li>
@@ -94,7 +95,7 @@
 
         <section>
             <h2>En Prévision</h2>
-            <p>Pour améliorer encore plus votre productivité, envisagez d’ajouter :</p>
+            <p>Pour améliorer encore plus votre productivité, envisage d’ajouter :</p>
             <ul>
                 <li>iPad Mini 6 – Avec une puce M2, il sera parfait pour un montage léger et des retouches rapides.</li>
                 <li>Un deuxième ordinateur performant pour déléguer certaines tâches de rendu.</li>
